# phimystra

./: .gitignore  README.md  package-lock.json  package.json  update.json  vite.config.ts
.github/workflows/: build-harmony.yml  build-windows.yml
docs/superpowers/specs/: 2026-07-02-android-mobile-design.md
harmonyos/: .gitignore  build-profile.json5  hvigorfile.ts  hvigorw  oh-package.json5
harmonyos/AppScope/: app.json5
harmonyos/entry/: build-profile.json5  hvigorfile.ts  oh-package.json5
harmonyos/entry/src/main/cpp/: CMakeLists.txt  audio_decoder_napi.cpp
harmonyos/entry/src/main/cpp/types/audio_decoder/: Index.d.ts
harmonyos/hvigor/: hvigor-config.json5  hvigor-wrapper.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src/components/: AudioImporter.tsx  ChartPlayer.tsx  DifficultySelector.tsx
src/modules/audioAnalysis/: index.ts  onsetDetection.ts  stft.ts
src/modules/audioImport/: audioDecoder.ts
src/modules/chartEngine/: chartBuilder.ts  difficultyParams.ts  index.ts  lineTemplates.ts  noteGenerator.ts
src/modules/pezExporter/: index.ts
src/modules/phiraEngine/: easings.ts  eventParser.ts  index.ts  previewEngine.ts  renderer.ts
src/stores/: projectStore.ts
src/types/: rpe.ts
tests/: bpmEstimation.test.ts  chartBuilder.test.ts  difficultyParams.test.ts  e2e-integration.test.ts  eventParser.test.ts  onsetDetection.test.ts  pezExporter.test.ts  rpe.test.ts
安装包/: README.md
源代码/: package-lock.json  package.json
源代码/src/: App.tsx  index.css
源代码/src-tauri/: Cargo.toml  tauri.conf.json
源代码/src-tauri/capabilities/: default.json
源代码/src-tauri/icons/: icon.icns
源代码/src-tauri/src/: lib.rs
源代码/src/components/: AudioImporter.tsx  ChartPlayer.tsx  ChartPreview.tsx  (+2 more)
源代码/tests/: audioDecoder.test.ts  difficultyParams.test.ts  e2e-integration.test.ts  easings.test.ts  eventParser.test.ts  noteGenerator.test.ts  pezExporter.test.ts  rpe.test.ts  stft.test.ts
(+47 files in other folders)
